# lapa-analysis

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  sampify_cli.py  search.html  searchindex.js  usage.html  validate_cli.py
.github/workflows/: docs.yml  export-poetry.yml
_modules/: index.html
_modules/lapa_ng/: naf.html
_modules/lapa_ng/pipeline/: clean.html
_sources/: api.rst.txt
classes/: naf.py  tests.py
classes/test_static/: RULES_A_V1.5.xls
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
fixtures/: RULES_A_V1._imported_from_xlsx.csv
lapa_ng/: __main__.py  _cli.py  classic.py  rules_regex.py
lapa_ng/naf/: __init__.py
lapa_ng/phonemes/: __init__.py
lapa_ng/pipeline/: __init__.py  clean.py
lapa_ng/rules/: matchers.py
lapa_ng/rules_regex/: matching.py  rules.py
lapa_ng/rules_table/: __init__.py  data.py  expressions.py  regex.py  table.py
lapa_ng/table_rules/: __init__.py  _util.py
notebooks/: index.ipynb
tests/: conftest.py  test_classic.py  test_factory.py  test_matcher.py  test_naf.py  test_phonemes.py  test_regex_matcher.py  test_regex_rules.py  test_rules.py  test_table_rules_expression.py  test_table_rules_io.py  test_tabular_parse.py  test_text_clean.py  test_translator_cached.py  test_translator_collectors.py  test_translator_matching.py
